# ArUco

./: README.md
aruco-3.0.11/src/: posetracker.cpp
aruco-3.0.11/utils_calibration/: dirreader.h
aruco-3.0.12/src/: posetracker.cpp
marker_mapper1.0.12/tests/: test_video.cpp
sources/aruco-3.0.10/: CMakeLists.txt  ChangeLog
sources/aruco-3.0.10/src/: posetracker.cpp
sources/aruco-3.0.10/utils_calibration/: aruco_calibration_fromimages.cpp  calibrator.cpp
sources/aruco-3.0.12/: CMakeLists.txt
sources/aruco-3.0.12/utils_calibration/: CMakeLists.txt  aruco_calibration.cpp
sources/aruco-3.1.0/src/: posetracker.cpp
sources/aruco-3.1.1/: CMakeLists.txt  ChangeLog  obfs.txt
sources/aruco-3.1.1/src/: fractaldetector.h  markerdetector.cpp
sources/aruco-3.1.1/src/fractallabelers/: fractalmarker.cpp  fractalmarkerset.cpp  fractalmarkerset.h  fractalposetracker.cpp  fractalposetracker.h
sources/aruco-3.1.1/utils_calibration/: aruco_calibration_fromimages.cpp
sources/aruco-3.1.1/utils_fractal/: fractal_create (copy).cpp  fractal_tracker.cpp
sources/aruco-3.1.2/: CMakeLists.txt  ChangeLog
sources/aruco-3.1.2/src/: CMakeLists.txt  markerdetector_impl.cpp
sources/aruco-3.1.2/utils_fractal/: CMakeLists.txt  fractal_create.cpp  fractal_pix2meters.cpp
sources/marker_mapper1.0.12/: CMakeLists.txt
sources/spm-slam_1.0.1/: LICENSE.txt  spm-slam.cpp
sources/spm-slam_1.0.1/spm-utils/: spm-slam.cpp
sources/spm-slam_1.0.1/src/: map.cpp  mapmanager.cpp  mapmanager.h  mapviewer.cpp  slam.h  ucoslam.cpp  ucoslam.h  ucoslam_exports.h
sources/spm-slam_1.0.1/src/basic_types/: frame.h
sources/spm-slam_1.0.1/src/optimization/: globaloptimizer.cpp  globaloptimizer_cvba_pba.cpp  globaloptimizer_full.cpp  globaloptimizer_full.h  globaloptimizer_g2o.cpp  globaloptimizer_points.h  globaloptimizer_simple.cpp  ippe.h  loopclosure.cpp  loopclosure.h  proj_info.h  solvepnp_g2o.cpp  solvepnp_g2o.h  solvepnp_ucoslam.cpp  sparselevmarq.h  ucosba.cpp  ucosba.h  weigthed_ba.cpp
sources/spm-slam_1.0.1/src/optimization/old/: globaloptimizer_ba.cpp  globaloptimizer_ba.h  globaloptimizer_und.cpp  globaloptimizer_und.h  multiview_point_opt.cpp  multiview_point_opt.h
sources/spm-slam_1.0.1/src/stuff/: covisgraph.cpp  debug.cpp  debug.h  expansiblecontainer.h  ferns.h  framedatabase.h  hash.h  heap.h  io_utils.cpp  io_utils.h  loopdetector.h  se3transform.h  tsqueue.h  utils.cpp
sources/spm-slam_1.0.1/src/viewers/: sgl.h
sources/ucoslam-1.0.4/gui/: installer_script.iss
sources/ucoslam-1.0.4/src/: imageparams.cpp  imageparams.h  map.h  mapviewer.h  ucoslam.h  ucoslamtypes.cpp
sources/ucoslam-1.0.4/src/basictypes/: debug.cpp  debug.h  se3transform.h
sources/ucoslam-1.0.4/src/featureextractors/: feature2dserializable.cpp
sources/ucoslam-1.0.4/src/map_types/: covisgraph.h  keyframedatabase.cpp  marker.cpp  marker.h
sources/ucoslam-1.0.4/src/optimization/: globaloptimizer.cpp  globaloptimizer_g2o.cpp  globaloptimizer_g2o.h  graphoptsim3.cpp  pnpsolver.cpp
sources/ucoslam-1.0.4/src/utils/: frameextractor.cpp  loopdetector.cpp  mapinitializer.cpp  mapinitializer.h  mapmanager.cpp
sources/ucoslam-1.0.4/utils/: CMakeLists.txt  inputreader.cpp  monocular_slam.cpp  rgbd_slam.cpp  stereo_slam.cpp
sources/ucoslam-1.0.4/utils_rgbd/: deformable_mapping.cpp  global_icp.cpp  nanogo.h  rgbdslam.cpp  sequenceoptimizer.cpp  viewercv.h
sources/ucoslam-1.0.4/utils_rgbd/rgbdreader/: onireader.cpp  rgbdreader.h
sources/ucoslam-1.0.7/src/: mapviewer.h
sources/ucoslam-1.0.7/src/basictypes/: misc.cpp
sources/ucoslam-1.0.7/src/map_types/: marker.cpp
sources/ucoslam-1.0.7/src/optimization/: pnpsolver.cpp
sources/ucoslam-1.0.7/src/utils/: frameextractor.cpp
sources/ucoslam-1.0.7/tests/: logtools.cpp
sources/ucoslam-1.0.7/utils/: inputreader.cpp  monocular_slam.cpp  stereo_slam.cpp  ucoslam_pmvs2.cpp
spm-slam_1.0.1/: CMakeLists.txt  README
spm-slam_1.0.1/spm-utils/: CMakeLists.txt
spm-slam_1.0.1/src/: CMakeLists.txt  imageparams.h  map.h  mapviewer.h  slam.cpp
spm-slam_1.0.1/src/basic_types/: frame.cpp  mappoint.cpp  mappoint.h  marker.cpp  marker.h
spm-slam_1.0.1/src/optimization/: globaloptimizer.h  globaloptimizer_cvba_pba.h  globaloptimizer_cvba_ucosba.cpp  globaloptimizer_cvba_ucosba.h  globaloptimizer_g2o.h  globaloptimizer_points.cpp  globaloptimizer_simple.h  ippe.cpp  levmarq.h  solvepnp.cpp  solvepnp.h  weigthed_ba.h
spm-slam_1.0.1/src/optimization/old/: globaloptimizer.cpp  globaloptimizer.h
spm-slam_1.0.1/src/stuff/: covisgraph.h  ferns.cpp  framedatabase.cpp  frameextractor.cpp  frameextractor.h  loopdetector.cpp  mapinitializer.cpp  mapinitializer.h  matcher.cpp  matcher.h  minmaxbags.h  picoflann.h  reusablecontainer.h  se3.h  timers.h  utils.h
spm-slam_1.0.1/src/viewers/: slam_sglcvviewer.h
ucoslam-1.0.4/: CMakeLists.txt  README.txt
ucoslam-1.0.4/src/: map.cpp  ucoslam.cpp  ucoslamtypes.h
ucoslam-1.0.4/src/basictypes/: misc.cpp  misc.h
ucoslam-1.0.4/src/featureextractors/: ORBextractor.cpp  ORBextractor.h  feature2dserializable.h  gridextractor.cpp
ucoslam-1.0.4/src/map_types/: covisgraph.cpp  frame.cpp
ucoslam-1.0.4/src/optimization/: globaloptimizer.h  pnpsolver.h  typesg2o.h
ucoslam-1.0.4/src/utils/: frameextractor.h  framematcher.cpp  mapmanager.h  system.cpp  system.h
ucoslam-1.0.4/utils/: createinitialparamfile.cpp  inputreader.h  mapviewer.cpp
ucoslam-1.0.4/utils_rgbd/: CMakeLists.txt  global_icp.h
ucoslam-1.0.4/utils_rgbd/rgbdreader/: nyureader.cpp  onireader.h  rgbdreader.cpp  transform3d.cpp  transform3d.h
基于ArUco的视觉定位/: README  基于ArUco的视觉定位（一） - 等你下课 - CSDN博客.mhtml  基于ArUco的视觉定位（二） - 等你下课 - CSDN博客.mhtml  基于ArUco的视觉定位（四） - 等你下课 - CSDN博客.mhtml
